[project]
name = "Rh-s-PyTool"
version = "0.2.0"
description = "Python code instruments that could be used for index comprehensive evaluation."
authors = [
    {name = "skahanium", email = "skahanium@gmail.com"},
]
dependencies = [
    "jieba>=0.42.1",
    "numpy>=1.23.1",
    "pandas>=1.4.3",
]
requires-python = ">=3.10, <3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
allow_prereleases = true


[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[project.optional-dependencies]
others=["notebook"]

[tool.pdm.dev-dependencies]
lint = [
    "autopep8>=1.6.0",
]
test = [
    "pytest>=7.1.2",
    "pytest-cov>=3.0.0",
]
docs = [
    "mkdocs-material>=8.3.9",
    "mkdocs>=1.3.1",
]

[tool.pdm.build]
package-dir = "src"