[project]
name = "Rh-s-PyTool"
version = "0.3.0"
description = "一系列Python工具的合集，用于中国省、市、区县三级行政区域的名称查询和补全、行政中心的经纬度查询、球面距离计算，同时也包含了综合指标评价方法的各种构成方法。"
authors = [{ name = "skahanium", email = "skahanium@gmail.com" }]
dependencies = [
    "jieba>=0.42.1",
    "numpy>=1.23.1",
    "polars>=0.14.0",
    "numba>=0.56.4",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm]
allow_prereleases = false

[project.urls]
Github = "https://github.com/skahanium/Rh-s-PyTool"
Documentation = "https://skahanium.github.io/Rh-s-PyTool/"

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[project.optional-dependencies]
others = ["notebook", "pandas>=1.4.3"]

[tool.pdm.dev-dependencies]
lint = [
    "ruff>=0.0.260",
    "pylint>=2.17.1",
]
test = ["pytest>=7.1.2", "pytest-cov>=3.0.0"]

[tool.pdm.build]
package-dir = "src"
